#
# ParaStation
#
# Copyright (C) 2024 ParTec AG, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
 
include $(top_srcdir)/Makefile_single.mtest

EXTRA_DIST = testlist.in

noinst_PROGRAMS = bcast_root \
    ibcast_root \
    large_acc_flush_local \
    large_msg_typed \
    large_msg_builtin \
    large_msg_noncontig \
    large_msg_coll_bcast \
    large_msg_coll_ibcast \
    large_msg_coll_allred \
    large_msg_coll_iallred \
    large_msg_coll_reduce \
    large_msg_coll_ireduce \
    large_msg_coll_scatter \
    large_msg_coll_iscatter \
    large_msg_coll_gather \
    large_msg_coll_igather \
    large_msg_coll_allgather \
    large_msg_coll_iallgather \
    large_msg_coll_alltoall \
    large_msg_coll_ialltoall \
    large_msg_coll_alltoall_inplace \
    large_msg_coll_ialltoall_inplace
