#
# ParaStation
#
# Copyright (C) 2024-2025 ParTec AG, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
 
include $(top_srcdir)/Makefile_single.mtest

EXTRA_DIST = testlist

noinst_PROGRAMS = intercomm_anysrc \
    num_contexts_2k \
    num_contexts_4k \
    split_type_integrity
