#
# ParaStation
#
# Copyright (C) 2024-2026 ParTec AG, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.

include $(top_srcdir)/Makefile_single.mtest

EXTRA_DIST = testlist

noinst_PROGRAMS = mpix_info_merge_array mpix_info_split_array \
                  mpix_info_get_hex mpix_info_dup_key \
                  mpix_info_nested
