#
# ParaStation
#
# Copyright (C) 2024-2025 ParTec AG, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.

include $(top_srcdir)/Makefile_single.mtest

EXTRA_DIST = testlist

noinst_PROGRAMS = acc_pairtype \
    acc_vecsum \
    get_acc_loc \
    get_acc_pairtype \
    get_acc_shm_pairtype \
    locknull \
    win_flavor_err_shm \
    win_flavor_err_dyn \
    win_shm_dup_comm \
    win_shm_large \
    win_shm_multiple \
    win_shm_recursive \
    win_sync_err_flush \
    win_sync_err_flushall \
    win_sync_err_lockall_at \
    win_sync_err_lockall_pt \
    win_sync_err_unlockall \
    win_test_ordering \
    win_info
