#
# ParaStation
#
# Copyright (C) 2024 ParTec AG, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
 
include $(top_srcdir)/Makefile_single.mtest

EXTRA_DIST = testlist

noinst_PROGRAMS = spawn_anysrc \
    spawn_intercomm_stress \
    spawn_isend \
    spawn_rma \
    spawn_ssend \
    spawn_univ_anysrc_cancel \
    spawn_univ_anysrc_order_mixed_comms \
    spawn_univ_anysrc_order \
    spawn_univ_anysrc \
    spawn_univ_comm \
    spawn_univ_discon \
    spawn_univ_split
